tests/error/bit_cast_padding2.bz
// error: value type '[[64: u8], u8, u16]' and result type '[[64: u8], u32]' have incompatible paddings in bit cast
// note: value type has a padding of 1 byte at offset 65, but result type doesn't
function test()
{
	let t = [[64: u8], u8, u16]();
	let _ = __builtin_bit_cast([[64: u8], u32], t);
}
